--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ h1 {
   text-decoration: underline;
 }
 
-
 .section-heading {
   font-size: 5rem;
   color: #333;
@@ -52,9 +51,7 @@ h1 {
   border-bottom: 0.3rem solid #333;
   text-shadow: 0.2rem 0.2rem 0.5rem #555;
 }
-/* End of Reset and Common Styles */
 
-/* Section 1 */
 .section-1 {
   width: 100%;
   height: 100vh;
@@ -112,9 +109,7 @@ h1 {
   text-transform: uppercase;
   letter-spacing: 0.3rem;
 }
-/* End of Section 1 */
 
-/* Navbar */
 .navbar {
   width: 100%;
   height: 4rem;
@@ -166,9 +161,7 @@ h1 {
 .navbar-link:hover::before {
   width: 130%;
 }
-/* End of Navbar */
 
-/* Section 2 */
 .section-2 {
   width: 100%;
   height: 100%;
@@ -191,7 +184,7 @@ h1 {
 
 .skills-list {
   list-style: none;
-  padding: 0;
+  padding: 20px;
   width: 45%;
 }
 
