--- a/style.css
+++ b/style.css
@@ -122,6 +122,8 @@ h1 {
 .sticky {
   position: fixed;
   top: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 .navbar-link {
@@ -430,9 +432,10 @@ h1 {
     width: 40rem;
   }
 
-  .copyright {
-    width: 70%;
+  .content {
+    padding: 0 20px;
   }
+
 }
 
 @media (max-width: 500px) {
